<resources>
    <string name="app_name">一键签到</string>
    <string name="fragment_btn_week">第一周</string>
    <string name="fragment_tv_course">作息表</string>
    <string name="fragment_tv_me">我的</string>
    <string name="fragment_tv_attendance">签到</string>
    <string name="fragment_me_tv_landing">我的信息</string>
    <string name="fragment_me_tv_exit">退出</string>
    <string name="fragment_me_tv_about">关于</string>
    <string name="fragment_me_tv_help">帮助</string>
    <string name="layout_course_btn_time_table">作息表</string>
    <string name="title_general_back">返回</string>
    <string name="fragment_me_tv_setting">设置</string>
    <string name="pop_course_menu_tv_get_data">获取课程表</string>
    <string name="pop_course_menu_tv_time_table">作息时间表</string>
    <string name="activity_login_tv_title">登录</string>
    <string name="activity_login_edt_name">请输入姓名</string>
    <string name="activity_login_btn_save">保存信息</string>
    <string name="activity_login_edt_number">请输入学号</string>
    <string name="activity_info_tv_name">姓名</string>
    <string name="activity_info_id">学号</string>
    <string name="activity_info_btn_exit">退出登录</string>
    <string name="activity_info_tv_title">个人信息</string>
    <string name="activity_time_table_tv_title">作息时间表</string>
    <string name="activity_time_table_title">紫金学院教学作息时间表</string>
    <string name="activity_time_table_project">项目</string>
    <string name="activity_time_table_time">教学时间</string>
    <string name="activity_time_table_forenoon">上午</string>
    <string name="activity_time_table_one">第一节</string>
    <string name="activity_time_table_time_1">8:00–8:40</string>
    <string name="activity_time_table_two">第二节</string>
    <string name="activity_time_table_time_2">8:50–9:30</string>
    <string name="activity_time_table_three">第三节</string>
    <string name="activity_time_table_time_3">9:50–10:30</string>
    <string name="activity_time_table_four">第四节</string>
    <string name="activity_time_table_time_4">10:40–11:20</string>
    <string name="activity_time_table_five">第五节</string>
    <string name="activity_time_table_time_5">11:30–12:10</string>
    <string name="activity_time_table_nooning">中午</string>
    <string name="activity_time_table_six">第六节</string>
    <string name="activity_time_table_time_6">13:00–13:40</string>
    <string name="activity_time_table_time_7">第七节</string>
    <string name="activity_time_table_seven">13:50–14:30</string>
    <string name="activity_time_table_afternoon">下午</string>
    <string name="activity_time_table_eight">第八节</string>
    <string name="activity_time_table_time_8">15:00–15:40</string>
    <string name="activity_time_table_nine">第九节</string>
    <string name="activity_time_table_time_9">15:50–16:30</string>
    <string name="activity_time_table_ten">第十节</string>
    <string name="activity_time_table_10">16:40–17:20</string>
    <string name="activity_time_table_eleven">第十一节</string>
    <string name="activity_time_table_11">17:30–18:10</string>
    <string name="activity_time_table_night">晚上</string>
    <string name="activity_time_table_twelve">第十二节</string>
    <string name="activity_time_table_12">19:30–20:10</string>
    <string name="activity_time_table_thirteen">第十三节</string>
    <string name="activity_time_table_13">20:20–21:00</string>
    <string name="activity_time_table_fourteen">第十四节</string>
    <string name="activity_time_table_14">21:10–21:50</string>
    <string name="fragment_attendance_btn_connect_hint">连接教师端</string>
    <string name="activity_setting_tv_table">表格模式</string>
    <string name="activity_help_tv_ask_1">问：怎么签到？</string>
    <string name="activity_help_tv_ask_2">问：怎么获取课程表？</string>
    <string name="activity_help_tv_ask_3">问：怎么登陆？</string>
    <string name="activity_help_tv_ask_4">问：怎么切换表格模式？</string>
    <string name="activity_help_tv_answer_1">答：在签到界面点击“连接服务端”，连接成功后点击“签到”</string>
    <string name="activity_help_tv_answer_2">答：在课程表界面点击右上角的图标后点击“获取课程表”</string>
    <string name="activity_help_tv_answer_3">答：点击“我的”的第一个选项进入登陆界面输入学号密码点击“登录”即可</string>
    <string name="activity_help_tv_answer_4">答：点击“我的”的“设置”选项的“表格模式”</string>
    <string name="activity_start_tv">欢迎使用</string>
    <integer name="TAG_KEY_IV_ATTR">0</integer>
    <integer name="TAG_KEY_IV_COU">1</integer>
    <integer name="TAG_KEY_IV_ME">2</integer>
    <integer name="TAG_KEY_TV_ATTR">3</integer>
    <integer name="TAG_KEY_TV_COU">4</integer>
    <integer name="TAG_KEY_TV_ME">5</integer>
</resources>
