<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGeneraActionBackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activity_login_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_login_tv_title"
                android:textColor="@color/colorGeneralText"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/activity_login_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/action_general_back_state"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/action_general_iv_menu"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|left"
                    android:background="@null"
                    android:contentDescription="@string/title_general_back"
                    android:paddingLeft="11dp"
                    android:src="@drawable/ic_general_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_general_back"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/activity_login_edt_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edt_login_selector"
                android:hint="@string/activity_login_edt_name"
                android:inputType="text"
                android:maxLength="15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="#e6e6e6" />

            <EditText
                android:id="@+id/activity_login_edt_number"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edt_login_selector"
                android:hint="@string/activity_login_edt_number"
                android:inputType="number"
                android:maxLength="9" />

            <Button
                android:id="@+id/activity_login_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login_selector"
                android:text="@string/activity_login_btn_save"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>